      option informs conary to prefer x86_64 packages. This change allows
      group building to automatically resolve x86 packages. (CNY-525)
    * Conary now tries to install jobs as close to updateThreshold (without
      going over) as practical for a noticeable performance improvement
      (CNY-2283)
    * Conary no longer uses gpg for PGP key management. (CNY-2349)

  o Build Changes:
    * Conary will now ignore flavoring and requirements from elf libraries
      that are built for architectures other than the architecture that
      is being built for.  This avoids a common problem where a single
      extra sparc file library taints an entire package. (CNY-1717)
    * The rarely used "cvc describe" command line interface has been
      removed. (CNY-2357)
    * The rarely used "cvcdesc" script has been removed. (CNY-2357)

  o Server Changes:
    * Fixed scoring for target flavor sets (CNY-1539)
    * Setting/resetting the admin field permission is handled now by the
      setUserGroupIsAdmin() call instead of addAcl/editAcl (CNY-1782)
    * Removed (unimplemented) concept of caps for permissions
    * Added @requireClientProtocol decorator for server methods
    * Renamed usergroups to roles in the repository web user interface
      (CNY-1973)
    * Reworked server exceptions to have marshalling logic in the exception
      class instead of in a large if/elif block (CNY-747)
    * Call log now tracks cache misses (CNY-1843)
    * Repository no longer passes anonymous-hint to proxy layer (it has
      been False since 1.1.29)
    * Server exceptions are marshalled in the proxy layer now instead of
      in both the proxy and server layers
    * When the repository database is locked, RepositoryLocked exceptions
      are now returned for all code paths (CNY-1596)
    * troveNames method now filter by troveTypes argument (CNY-1838)
    * getPackageBranchPathIds method no longer requires an acl for the